--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,6 +13,15 @@
           <a class="nav-link" href="#">Jobs</a>
         </li>
       </ul>
+      <form class="d-flex" role="search">
+        <% if user_signed_in? %>
+          <%= link_to "Edit Profile", edit_user_registration_path, method: :get, class: "btn btn-outline-dark" %> &nbsp;
+          <%= button_to "Log out", destroy_user_session_path, method: :get, class: "btn btn-outline-dark" %>
+        <% else %>
+          <%= link_to "Sign in", new_user_session_path, method: :get, class: "btn btn-outline-dark" %>&nbsp;
+          <%= link_to "Sign up", new_user_registration_path, method: :get, class: "btn btn-outline-success" %>
+        <% end %>
+      </form>
     </div>
   </div>
 </nav>
