--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,8 +4,31 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <% if current_user.avatar.attached? %>
+      <%= image_tag url_for(current_user.avatar), style: "border-radius: 50%;" %>
+    <% end %>
+    <br><br>
+    <%= f.file_field :avatar %>
+  </div>
+
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :phone %><br />
+    <%= f.text_field :phone, autofocus: true, autocomplete: "phone" %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :address %><br />
+    <%= f.text_area :address, autofocus: true, autocomplete: "address" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
