Assessment and Question creation

--- a/app/views/assessments/_form.html.erb
+++ b/app/views/assessments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: assessment) do |form| %>
+<%= form_with(model: [@job, assessment]) do |form| %>
   <% if assessment.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(assessment.errors.count, "error") %> prohibited this assessment from being saved:</h2>
