--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -11,4 +11,4 @@
   <% end %>
 </div>
 
-<%= link_to "New assessment", new_assessment_path %>
+<%= link_to "New assessment", new_job_assessment_path(@job) %>
