--- a/app/views/assessments/new.html.erb
+++ b/app/views/assessments/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to assessments", assessments_path %>
+  <%= link_to "Back to assessments", job_assessments_path(@job) %>
 </div>
