--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: question) do |form| %>
+<%= form_with(model: [@assessment, question]) do |form| %>
   <% if question.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(question.errors.count, "error") %> prohibited this question from being saved:</h2>
@@ -15,12 +15,16 @@
     <%= form.label :statement, style: "display: block" %>
     <%= form.text_field :statement %>
   </div>
-
-  <div>
-    <%= form.label :assessment_id, style: "display: block" %>
-    <%= form.text_field :assessment_id %>
-  </div>
-
+  <br>
+  <%= form.fields_for :answers do |answer_fields| %>
+    <div class="field">
+      <%= answer_fields.label :option, "Option" %>
+      <%= answer_fields.text_field :option %>
+      <%= answer_fields.label :correct, "Correct?" %>
+      <%= answer_fields.check_box :correct %>
+    </div>
+  <% end %>
+  <br>
   <div>
     <%= form.submit %>
   </div>
