--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Jobs</a>
         </li>
+        <li class="nav-item">
+          <%= link_to "My Jobs", jobs_path, method: :get, class: "nav-link" %>
+        </li>
       </ul>
     </div>
   </div>
