--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,7 +4,7 @@
 
 <div>
   <%= link_to "Edit this question", edit_question_path(@question) %> |
-  <%= link_to "Back to questions", questions_path %>
+  <%#= link_to "Back to questions", questions_path %>
 
   <%= button_to "Destroy this question", @question, method: :delete %>
 </div>
