--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -12,6 +12,14 @@
   <% end %>
 
   <div>
+    <%= form.label :logo, style: "display: block" %>
+    <% if company.logo.attached? %>
+      <%= image_tag url_for(company.logo), class: "card-img-top mx-auto d-block", style: "width: auto; height: auto;" %>
+    <% end %>
+    <%= form.file_field :logo %>
+  </div>
+
+  <div>
     <%= form.label :name, style: "display: block" %>
     <%= form.text_field :name %>
   </div>
@@ -42,8 +50,8 @@
   </div>
 
   <div>
-    <%= form.label :registration_no, style: "display: block" %>
-    <%= form.text_field :registration_no %>
+    <%= form.label :registration_number, style: "display: block" %>
+    <%= form.text_field :registration_number %>
   </div>
 
   <div>
