--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -30,7 +30,7 @@
               <%= render 'layouts/role_based_dropdown' %>
               <li><hr class="dropdown-divider"></li>
               <li><%= link_to "Edit Profile", edit_user_registration_path, method: :get, class: "dropdown-item" %></li>
-              <li><%= button_to "Log out", destroy_user_session_path, method: :get, class: "dropdown-item" %></li>
+              <li><%= button_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
             </ul>
           </li>
         <% else %>
@@ -42,15 +42,6 @@
           </li>
         <% end %>
       </ul>
-<!--      <form class="d-flex" role="search">-->
-        <%# if user_signed_in? %>
-<!--          <%#= link_to "Edit Profile", edit_user_registration_path, method: :get, class: "btn btn-outline-dark" %> &nbsp;-->
-          <%#= button_to "Log out", destroy_user_session_path, method: :get, class: "btn btn-outline-dark" %>
-        <%# else %>
-<!--          <%#= link_to "Sign in", new_user_session_path, method: :get, class: "btn btn-outline-dark" %>&nbsp;-->
-          <%#= link_to "Sign up", new_user_registration_path, method: :get, class: "btn btn-outline-success" %>
-        <%# end %>
-<!--      </form>-->
     </div>
   </div>
 </nav>
