--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -11,27 +11,33 @@
     </div>
   <% end %>
 
-  <div class="card">
-    <div class="card-header">
-      <div class="d-flex justify-content">
-        <%= form.label :statement, style: "display: block" %>&nbsp;
-        <%= form.text_field :statement %>
+  <div>
+    <div class="form-group row">
+      <label class="col-sm-2 col-form-label">Question</label>
+      <div class="col-sm-10">
+        <%= form.text_area :statement, class: "form-control"%>
       </div>
     </div>
-    <div class="card-body">
-      <%= form.fields_for :answers do |answer_fields| %>
-        <div class="field">
-          <%= answer_fields.hidden_field :id %>
-          <%= answer_fields.label :option, "Option" %>
-          <%= answer_fields.text_field :option %>
-          <%= answer_fields.label :correct, "Correct?" %>
-          <%= answer_fields.check_box :correct %>
-        </div>
-      <% end %>
-      <br>
-      <div>
+    <br>
+    <div class="form-group row">
+      <div class="col-sm-2">Options</div>
+      <div class="col-sm-10">
+        <%= form.fields_for :answers do |answer_fields| %>
+          <div class="form-check">
+            <%= answer_fields.hidden_field :id %>
+            <%= answer_fields.check_box :correct, class: "form-check-input" %>
+            <%= answer_fields.text_field :option, class: "form-check-label" %>
+          </div>
+          <div class="field">
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <div class="col-sm-10">
         <%= form.submit class: "btn btn-primary" %>
       </div>
     </div>
   </div>
+
 <% end %>
