--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -11,47 +11,65 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+  <div class="form-group row">
+    <%= form.label :title, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :title, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :overview, style: "display: block" %>
-    <%= form.text_area :overview %>
+  <br>
+  <div class="form-group row">
+    <%= form.label :overview, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_area :overview, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :responsibilities, style: "display: block" %>
-    <%= form.text_area :responsibilities %>
+  <br>
+  <div class="form-group row">
+    <%= form.label :responsibilities, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_area :responsibilities, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :requirements, style: "display: block" %>
-    <%= form.text_area :requirements %>
+  <br>
+  <div class="form-group row">
+    <%= form.label :requirements, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_area :requirements, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :benifits, style: "display: block" %>
-    <%= form.text_area :benifits %>
+  <br>
+  <div class="form-group row">
+    <%= form.label :benifits, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_area :benifits, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :location, style: "display: block" %>
-    <%= form.text_field :location %>
+  <br>
+  <div class="form-group row">
+    <%= form.label :location, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :location, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :deadline, style: "display: block" %>
-    <%= form.datetime_field :deadline %>
+  <br>
+  <div class="form-group row">
+    <%= form.label :deadline, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.datetime_field :deadline, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :salary_range, style: "display: block" %>
-    <%= form.text_field :salary_range %>
+  <br>
+  <div class="form-group row">
+    <%= form.label :salary_range, class: "col-sm-2 col-form-label" %>
+    <div class="col-sm-10">
+      <%= form.text_field :salary_range, class: "form-control" %>
+    </div>
   </div>
-
-  <div>
-    <%= form.submit %>
+  <br>
+  <div class="form-group row">
+    <div class="col-sm-10">
+      <%= form.submit class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
