--- a/app/views/assessments/edit.html.erb
+++ b/app/views/assessments/edit.html.erb
@@ -6,5 +6,5 @@
 
 <div>
   <%= link_to "Show this assessment", @assessment %> |
-  <%= link_to "Back to assessments", assessments_path %>
+  <%= link_to "Back to assessments", job_assessments_path(@assessment) %>
 </div>
