--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -2,10 +2,8 @@
 
 <%= render @assessment %>
 
-<div>
-  <%= link_to "Edit this assessment", edit_assessment_path(@assessment) %> |
-  <%#= link_to "Back to assessments", job_assessments_path(@job) %>
-  <%= link_to "Set Questions", assessment_questions_path(@assessment), method: :get %>
-
-  <%= button_to "Destroy this assessment", @assessment, method: :delete %>
+<div class="d-flex">
+  <%= link_to "Set Questions", assessment_questions_path(@assessment), method: :get, class: "btn btn-success" %>&nbsp;
+  <%= link_to "Edit", edit_assessment_path(@assessment),class: "btn btn-warning" %>&nbsp;
+  <%= button_to "Destroy", @assessment, method: :delete, class: "btn btn-danger" %>
 </div>
