--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,11 +9,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Home</a>
         </li>
+
         <li class="nav-item">
-          <a class="nav-link" href="#">Jobs</a>
-        </li>
-        <li class="nav-item">
-          <%= link_to "My Jobs", jobs_path, method: :get, class: "nav-link" %>
+          <%= link_to "Jobs", jobs_path, method: :get, class: "nav-link" %>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
@@ -42,15 +40,6 @@
           </li>
         <% end %>
       </ul>
-<!--      <form class="d-flex" role="search">-->
-        <%# if user_signed_in? %>
-<!--          <%#= link_to "Edit Profile", edit_user_registration_path, method: :get, class: "btn btn-outline-dark" %> &nbsp;-->
-          <%#= button_to "Log out", destroy_user_session_path, method: :get, class: "btn btn-outline-dark" %>
-        <%# else %>
-<!--          <%#= link_to "Sign in", new_user_session_path, method: :get, class: "btn btn-outline-dark" %>&nbsp;-->
-          <%#= link_to "Sign up", new_user_registration_path, method: :get, class: "btn btn-outline-success" %>
-        <%# end %>
-<!--      </form>-->
     </div>
   </div>
 </nav>
