--- a/app/views/jobs/_job.html.erb
+++ b/app/views/jobs/_job.html.erb
@@ -1,42 +1,60 @@
 <div id="<%= dom_id job %>">
-  <p>
-    <strong>Title:</strong>
-    <%= job.title %>
-  </p>
-
-  <p>
-    <strong>Overview:</strong>
-    <%= job.overview %>
-  </p>
-
-  <p>
-    <strong>Responsibilities:</strong>
-    <%= job.responsibilities %>
-  </p>
-
-  <p>
-    <strong>Requirements:</strong>
-    <%= job.requirements %>
-  </p>
-
-  <p>
-    <strong>Benifits:</strong>
-    <%= job.benifits %>
-  </p>
-
-  <p>
-    <strong>Location:</strong>
-    <%= job.location %>
-  </p>
-
-  <p>
-    <strong>Deadline:</strong>
-    <%= job.deadline %>
-  </p>
-
-  <p>
-    <strong>Salary range:</strong>
-    <%= job.salary_range %>
-  </p>
-
+  <div class="card-body">
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Title</label>
+        <div class="col-sm-10">
+          <%= job.title %>
+        </div>
+      </div>
+      <br>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Overview</label>
+        <div class="col-sm-10">
+          <%= job.overview %>
+        </div>
+      </div>
+      <br>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Responsibilities</label>
+        <div class="col-sm-10">
+          <%= job.responsibilities %>
+        </div>
+      </div>
+      <br>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Requirements</label>
+        <div class="col-sm-10">
+          <%= job.requirements %>
+        </div>
+      </div>
+      <br>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Benefits</label>
+        <div class="col-sm-10">
+          <%= job.benifits %>
+        </div>
+      </div>
+      <br>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Location</label>
+        <div class="col-sm-10">
+          <%= job.location %>
+        </div>
+      </div>
+      <br>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Salary Range</label>
+        <div class="col-sm-10">
+          <%= job.salary_range %>
+        </div>
+      </div>
+      <br>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Deadline</label>
+        <div class="col-sm-10">
+          <%= job.deadline %>
+        </div>
+      </div>
+      <br>
+    </div>
 </div>
