--- a/app/views/layouts/_role_based_dropdown.html.erb
+++ b/app/views/layouts/_role_based_dropdown.html.erb
@@ -2,6 +2,7 @@
   <%= link_to "Manage Company", "#", method: :get, class: "dropdown-item" %>
   <%= link_to "Approve Recruiter", "#", method: :get, class: "dropdown-item" %>
 <% elsif current_user.recruiter?%>
+  <%= link_to "My Jobs", my_jobs_path, method: :get, class: "dropdown-item" %>
 <% elsif current_user.candidate? %>
 <% end %>
 
