--- a/app/views/assessments/new.html.erb
+++ b/app/views/assessments/new.html.erb
@@ -5,5 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Back to assessments", job_assessments_path(@job) %>
+  <%#= link_to "Back to assessments", job_assessments_path(@job) %>
+  <%= link_to "Back to Job", job_path(@job) %>
 </div>
