--- a/app/views/devise/registrations/_signup.html.erb
+++ b/app/views/devise/registrations/_signup.html.erb
@@ -2,6 +2,13 @@
 
   <%= f.hidden_field :role, value: role_type %>
 
+  <% if role_type == :recruiter %>
+    <div class="field">
+      <%= form.label :company_id %>
+      <%= form.select :company_id, Company.all, :id, :name, { prompt: 'Select Company' } %>
+    </div>
+  <% end %>
+
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
