--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,7 +28,7 @@
               <%= render 'layouts/role_based_dropdown' %>
               <li><hr class="dropdown-divider"></li>
               <li><%= link_to "Edit Profile", edit_user_registration_path, method: :get, class: "dropdown-item" %></li>
-              <li><%= button_to "Log out", destroy_user_session_path, method: :get, class: "dropdown-item" %></li>
+              <li><%= button_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
             </ul>
           </li>
         <% else %>
