role specific field added to job show view

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,13 +5,17 @@
     <%= render @job %>
   </div>
   <div class="card-header d-flex">
-    <%= link_to "Back to jobs", my_jobs_path, class: "btn btn-sm btn-secondary" %>&nbsp;
-    <%= link_to "Edit job", edit_job_path(@job), class: "btn btn-sm btn-warning" %>&nbsp;
-    <% if @job.assessment.nil? %>
-      <%= link_to "Add Assessment", new_job_assessment_path(@job), class: "btn btn-sm btn-primary" %>&nbsp;
-    <% else %>
-      <%= link_to "Show Assessment", assessment_path(@job.assessment), class: "btn btn-sm btn-info" %>&nbsp;
+    <% if current_user == @job.user %>
+      <%= link_to "Back to jobs", my_jobs_path, class: "btn btn-sm btn-secondary" %>&nbsp;
+      <%= link_to "Edit job", edit_job_path(@job), class: "btn btn-sm btn-warning" %>&nbsp;
+      <% if @job.assessment.nil? %>
+        <%= link_to "Add Assessment", new_job_assessment_path(@job), class: "btn btn-sm btn-primary" %>&nbsp;
+      <% else %>
+        <%= link_to "Show Assessment", assessment_path(@job.assessment), class: "btn btn-sm btn-info" %>&nbsp;
+      <% end %>
+      <%= button_to "Destroy this job", @job, method: :delete, class: "btn btn-sm btn-danger" %>
+    <% elsif @job.deadline > Time.now %>
+      <%= link_to "Apply Now", "#", class: "btn btn-sm btn-primary" %>
     <% end %>
-    <%= button_to "Destroy this job", @job, method: :delete, class: "btn btn-sm btn-danger" %>
   </div>
 </div>
