--- a/app/views/applications/_form.html.erb
+++ b/app/views/applications/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: application) do |form| %>
+<%= form_with(model: [@job, application]) do |form| %>
   <% if application.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(application.errors.count, "error") %> prohibited this application from being saved:</h2>
@@ -11,22 +11,30 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :status, style: "display: block" %>
-    <%= form.text_field :status %>
-  </div>
+  <div class="card">
+    <div class="card-header">
+      <h3 class="form-group"><%= @job.title %></h3>
+    </div>
 
-  <div>
-    <%= form.label :job_id, style: "display: block" %>
-    <%= form.text_field :job_id %>
-  </div>
+    <div class="card-body">
+      <div class="field">
+        <%= form.label :resume, class: "form-group" %>
+        <%= form.file_field :resume , class: "form-group" %>
+        <% if application.errors[:resume].any? %>
+          <div class="error"><%= application.errors[:resume].first %></div>
+        <% end %>
+      </div>
 
-  <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
-
-  <div>
-    <%= form.submit %>
+      <div>
+        <%= form.hidden_field :job_id, value: @job.id %>
+      </div>
+      <div>
+        <%= form.hidden_field :status, value: :applied %>
+      </div>
+      <br>
+      <div>
+        <%= form.submit class: "btn btn-success"%>
+      </div>
+    </div>
   </div>
 <% end %>
