--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -4,7 +4,7 @@
 
 <div>
   <%= link_to "Edit this application", edit_application_path(@application) %> |
-  <%= link_to "Back to applications", applications_path %>
+  <%#= link_to "Back to applications", applications_path %>
 
   <%= button_to "Destroy this application", @application, method: :delete %>
 </div>
