add participation details on application view

--- a/app/views/applications/_application.html.erb
+++ b/app/views/applications/_application.html.erb
@@ -18,4 +18,12 @@
     </div>
   <% end %>
 
+  <% if participation(application).present? %>
+    <div class="card">
+      <div class="card-body">
+        <strong>Your obtained score: </strong> <%= participation(application).score %>
+      </div>
+    </div>
+  <% end %>
+
 </div>
