recruiter can view resume

--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -2,13 +2,34 @@
 
 <h1>Applications</h1>
 
-<div id="applications">
-  <% @applications.each do |application| %>
-    <%= render application %>
-    <p>
-      <%= link_to "Show this application", application %>
-    </p>
-  <% end %>
+<div class="d-flex">
+  <table class="table table-primary">
+    <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Resume</th>
+      <th scope="col">Status</th>
+    </tr>
+    </thead>
+    <tbody>
+    <% @applications.each do |application| %>
+    <tr>
+      <td><%= application.user.name %></td>
+      <td>
+        <%= render "resume_viewer", application: application %>
+      </td>
+      <td>
+        <% if application.applied? %>
+          <span class="badge text-bg-secondary">Pending</span>
+        <% elsif application.selected? %>
+          <span class="badge text-bg-success">Selected</span>
+        <% elsif application.rejected? %>
+          <span class="badge text-bg-danger">Rejected</span>
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+    </tbody>
+  </table> &nbsp;&nbsp;
 </div>
 
-<%= link_to "New application", new_application_path %>
