--- a/app/views/jobs/my_jobs.html.erb
+++ b/app/views/jobs/my_jobs.html.erb
@@ -17,7 +17,10 @@
             <strong>Salary range:</strong> <%= job.salary_range %><br>
             <strong>Deadline:</strong> <%= job.deadline %><br>
           </p>
-          <%= link_to "Show Details", job, class: "btn btn-primary btn-sm" %>
+          <div class="d-flex">
+            <%= link_to "Show Details", job, class: "btn btn-primary btn-sm" %> &nbsp;
+            <%= link_to "Show Applications", job_applications_path(job), class: "btn btn-info btn-sm" %>
+          </div>
         </div>
       </div>
     </div>
