added pagy gem, and configured to company index

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -26,5 +26,5 @@
 </div>
 
 <div class="pagination-container d-flex justify-content-center mt-4">
-  <%= bootstrap_paginate @courses %>
+  <%== pagy_bootstrap_nav(@pagy) %>
 </div>
