added timer and automatic submission logic

--- a/app/views/participations/_form.html.erb
+++ b/app/views/participations/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: [@application, participation]) do |form| %>
+<h3 ><span id="timer" class="badge text-bg-primary"></span></h3>
+<%= form_with(model: [@application, participation], id: 'assessment-form') do |form| %>
   <% if participation.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(participation.errors.count, "error") %> prohibited this participation from being saved:</h2>
@@ -18,28 +19,6 @@
   <div>
     <%= form.hidden_field :assessment_id, value: assessment(@application).id %>
   </div>
-
-  <%# @questions.each do |question| %>
-    <%#= form.fields_for :submissions do |submission_field| %>
-<!--      <div class="card">-->
-<!--        <div class="card-header">-->
-<!--          <h5><%#= question.statement %></h5>-->
-          <%#= submission_field.hidden_field :question_id, value:  question.id %>
-<!--        </div>-->
-<!--        <div class="card-body">-->
-          <%#= question.answers.each do |answer| %>
-            <%# submission_field.fields_for :responses do |response_field| %>
-<!--              <div class="form-check">-->
-                <%#= response_field.hidden_field :answer_id, value: answer.id %>
-                <%#= response_field.check_box :correct, class: "form-check-input" %>
-                <%#= answer.option %>
-<!--              </div>-->
-            <%# end %>
-          <%# end %>
-<!--        </div>-->
-<!--      </div>-->
-    <%# end %>
-  <%# end %>
 
   <% @questions.each do |question| %>
     <%= form.fields_for :submissions, form.object.submissions.build(question_id: question.id) do |submission_field| %>
@@ -61,8 +40,14 @@
       </div>
     <% end %>
   <% end %>
-
+  <br>
   <div>
-    <%= form.submit %>
+    <%= form.submit "Submit", class: "btn btn-primary"%>
   </div>
 <% end %>
+
+<script>
+    var endTime = new Date('<%= @assessment.ending_time %>').getTime();
+</script>
+
+<%= javascript_include_tag 'timer' %>
