timer bg changed

--- a/app/views/participations/_form.html.erb
+++ b/app/views/participations/_form.html.erb
@@ -1,4 +1,4 @@
-<h3 ><span id="timer" class="badge text-bg-primary"></span></h3>
+<h3 ><span id="timer" class="badge text-bg-warning"></span></h3>
 <%= form_with(model: [@application, participation], id: 'assessment-form') do |form| %>
   <% if participation.errors.any? %>
     <div style="color: red">
