trying to apply authorization for application index

--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Applications</h1>
+<h1>Applications of <%= @job.title %></h1>
 
 <div class="d-flex">
   <table class="table table-primary">
