--- a/app/views/jobs/my_jobs.html.erb
+++ b/app/views/jobs/my_jobs.html.erb
@@ -19,7 +19,7 @@
           </p>
           <div class="d-flex">
             <%= link_to "Show Details", job, class: "btn btn-primary btn-sm" %> &nbsp;
-            <%= link_to "Show Applications", job_applications_path(job), class: "btn btn-info btn-sm" %>
+            <%= link_to "Show Applications", job_recruiter_applications_path(job), class: "btn btn-info btn-sm" %>
           </div>
         </div>
       </div>
