changes automatic submission

--- a/app/views/participations/_form.html.erb
+++ b/app/views/participations/_form.html.erb
@@ -42,7 +42,7 @@
   <% end %>
   <br>
   <div>
-    <%= form.submit "Submit", class: "btn btn-primary"%>
+    <%= form.submit "Submit", class: "btn btn-primary", id: "submit-button"%>
   </div>
 <% end %>
 
