--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -9,6 +9,7 @@
       <th scope="col">Name</th>
       <th scope="col">Resume</th>
       <th scope="col">Status</th>
+      <th scope="col">Score</th>
     </tr>
     </thead>
     <tbody>
@@ -26,6 +27,9 @@
         <% elsif application.rejected? %>
           <span class="badge text-bg-danger">Rejected</span>
         <% end %>
+      </td>
+      <td>
+        <%= participation_score(application) %>
       </td>
     </tr>
     <% end %>
