adding filtering options

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -2,4 +2,20 @@
 
 <h1>Jobs</h1>
 
+<%= form_with url: jobs_path, method: :get, local: true do |form| %>
+  <div class="d-flex justify-content">
+    <div class="field">
+      <%= form.label :company_id %>
+      <%= form.collection_select :company_id, Company.all, :id, :name, { prompt: 'Select Company' }, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :keyword, 'Search by Keyword' %>
+      <%= form.text_field :keyword, value: params[:keyword], class: 'form-control' %>
+    </div>
+
+    <%= form.submit 'Filter', class: 'btn btn-primary' %>
+  </div>
+<% end %>
+
 <%= render "job_card" %>
