--- a/app/views/devise/registrations/_signup.html.erb
+++ b/app/views/devise/registrations/_signup.html.erb
@@ -4,8 +4,8 @@
 
   <% if role_type == :recruiter %>
     <div class="field">
-      <%= f.label :company_id %>
-      <%= f.collection_select :company_id, Company.all, :id, :name, { prompt: 'Select Company' }, class: "form-control" %>
+      <%= f.label :office_id %>
+      <%= f.collection_select :office_id, Company.all, :id, :name, { prompt: 'Select Company' }, class: "form-control" %>
     </div>
   <% end %>
 
