change view on company index

--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -3,7 +3,7 @@
     <% if company.logo.attached? %>
       <%= image_tag url_for(company.logo), class: "card-img-top mx-auto d-block", style: "width: auto; height: auto;" %>
     <% else %>
-      <img src="https://via.placeholder.com/150" class="card-img-top rounded-circle mx-auto d-block" alt="No Logo" style="width: 150px; height: 150px;">
+      <img src="https://via.placeholder.com/150" class="card-img-top mx-auto d-block" alt="No Logo" style="width: 150px; height: 150px;">
     <% end %>
   </div>
   <div class="card-body text-center">
