--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -8,7 +8,11 @@
       <% company_group.each do |company| %>
         <div class="col-12 col-md-6 col-lg-4 mb-4">
           <div class="card text-center">
-            <%= image_tag company.logo, class: "card-img-top", alt: company.name %>
+            <% if company.logo.attached? %>
+              <%= image_tag url_for(company.logo), class: "card-img-top" %>
+            <% else %>
+              <img src="https://via.placeholder.com/150" class="card-img-top" alt="No Logo" style="width: 150px; height: 58px;">
+            <% end %>
             <div class="card-body">
               <p class="card-text" style="display: flex; justify-content: space-between; align-items: center;">
                 <span>
